--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "v1",
+  "name": "art",
   "version": "1.0.0",
   "description": "v1 of yelpexhib",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
-  "author": "Natallia A",
+  "author": "Natallia Akulenka",
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
